code for compiling results finished; working on code to compare with local run

--- a/globusgalaxyops/notebooks/globusResultCompile.ipynb
+++ b/globusgalaxyops/notebooks/globusResultCompile.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:3e1e5835138c2104afa44fc4244bc55ea78e718a0dac0feb9e4aa69e24a9c47b"
+  "signature": "sha256:2f1dfcf88f1e1e172e37908a5cef2240de15b2e44864d0aee6727acac601f07d"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -12,12 +12,14 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "import sys, os, re, argparse, csv"
+      "import sys, os, re, argparse, csv\n",
+      "import shutil\n",
+      "from pprint import pprint"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 88
     },
     {
      "cell_type": "code",
@@ -91,7 +93,6 @@
       "        self.dir = processed_dir\n",
       "        self.pf = re.search('Project_.*', processed_dir).group()\n",
       "\n",
-      "    # maybe create different class for parsing batch file (i.e., WorkflowParser)?\n",
       "    def get_outputs(self):\n",
       "        \n",
       "        processed_dir = self.dir\n",
@@ -112,26 +113,14 @@
       "            self.get_outputs()\n",
       "            \n",
       "        for lib in self.od:\n",
-      "            FileMunger(lib, self.od[lib]).go()\n",
-      "    \n",
-      "#     def get_result_subdirs(self):\n",
-      "        \n",
-      "#         project_folder = self.pf\n",
-      "        \n",
-      "#         if not hasattr(self, 'params'):\n",
-      "#             self.get_lib_params()\n",
-      "        \n",
-      "#         lib_paths = [ re.sub('.*' + project_folder + '/', '', l) \\\n",
-      "#                       for l in self.params if project_folder in l ]\n",
-      "\n",
-      "#         result_subdirs = list(set( os.path.dirname(p) for p in lib_paths ))\n",
-      "\n",
-      "#         self.subdirs = result_subdirs"
+      "            print lib\n",
+      "            sc = SampleCurator(lib, self.od[lib])\n",
+      "            sc.organize_files(self.dir)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 118
     },
     {
      "cell_type": "code",
@@ -166,7 +155,7 @@
       "                              if re.search('^' + rs.lower() + '$', output) ][0]\n",
       "        \n",
       "        return result_source\n",
-      "    \n",
+      "            \n",
       "    def build_source_dict(self):\n",
       "        \n",
       "        output_dict = self.lod\n",
@@ -183,15 +172,22 @@
       "            else:\n",
       "                source_dict[rs] = {o: {'file': output_dict[o],\n",
       "                                       'type': rt}}\n",
-      "            print '%s in source_dict[%s]: %s' % (o, rs, o in source_dict[rs])\n",
       "        \n",
       "        self.sd = source_dict\n",
-      "        return source_dict"
+      "    \n",
+      "    def organize_files(self, target_dir):\n",
+      "        \n",
+      "        if not hasattr(self, 'sd'):\n",
+      "            self.build_source_dict()\n",
+      "        \n",
+      "        for rs in self.sd:\n",
+      "            fm = FileMunger(self, target_dir, rs)\n",
+      "            fm.go()\n"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 104
+     "prompt_number": 119
     },
     {
      "cell_type": "code",
@@ -199,12 +195,14 @@
      "input": [
       "class FileMunger(object):\n",
       "    \n",
-      "    def __init__(self, lib_id, processed_dir, result_source, output_dict):\n",
+      "    def __init__(self, sample_curator, target_dir, result_source):\n",
       "        \n",
-      "        self.lib = lib_id\n",
-      "        self.pd = processed_dir\n",
+      "        self.lib = sample_curator.lib\n",
+      "        self.dir = target_dir \n",
+      "        self.target = target_dir + '_formatted'\n",
       "        self.rs = result_source\n",
-      "        self.sod = output_dict\n",
+      "        \n",
+      "        self.sod = sample_curator.sd[result_source]\n",
       "        self.prep_output_subdir()\n",
       "    \n",
       "    def prep_output_subdir(self):\n",
@@ -236,106 +234,67 @@
       "                            'htseq_counts_txt': self.lib + '_count.txt',\n",
       "                            'tophat_alignments_bam': self.lib + '.bam',\n",
       "                            'htseq_metrics_txt': self.lib + 'mm.txt'}\n",
+      "        \n",
       "        type_subdir_dict = {'qc': 'QC',\n",
       "                            'metrics': 'metrics',\n",
       "                            'counts': 'counts',\n",
       "                            'alignments': 'alignments',\n",
       "                            'trimmed': 'TrimmedFastqs',\n",
       "                            'trinity': 'Trinity'}\n",
-      "\n",
+      "        \n",
+      "        dirs_to_bundle = []\n",
       "        for o in source_output_dict:\n",
       "            rf = source_output_dict[o]['file']\n",
       "            rt = source_output_dict[o]['type']\n",
       "            \n",
-      "#             print o\n",
-      "            out_dir = os.path.join(processed_dir, type_subdir_dict[rt], self.subdir)\n",
-      "#             print out_dir\n",
-      "            \n",
       "            if not re.search('fastq$', o):\n",
-      "                print os.path.join(processed_dir, type_subdir_dict[rt], os.path.basename(rf))\n",
-      "                print os.path.join(out_dir, result_file_dict[o])\n",
-      "            \n",
-      "#     def bundle_files(self):\n",
-      "     "
+      "                out_dir = os.path.join(self.target, type_subdir_dict[rt], self.subdir)\n",
+      "                if not os.path.isdir(out_dir):\n",
+      "                    os.makedirs(out_dir)\n",
+      "                if len(self.subdir) and not self.rs == 'trinity':\n",
+      "                    dirs_to_bundle.append(out_dir)\n",
+      "                \n",
+      "                src_file = os.path.join(self.dir, type_subdir_dict[rt], os.path.basename(rf))\n",
+      "                if not os.path.isfile(src_file):\n",
+      "                    print \"File %s not found\" % src_file\n",
+      "                else:\n",
+      "                    shutil.copy(src_file,\n",
+      "                                os.path.join(out_dir, result_file_dict[o]))\n",
+      "        self.bundle = list(set(dirs_to_bundle))\n",
+      "                            \n",
+      "    def bundle_files(self):\n",
+      "        for d in self.bundle:\n",
+      "            shutil.make_archive(d, 'zip', d)\n",
+      "            shutil.rmtree(d)\n",
+      "    \n",
+      "    def go(self):\n",
+      "        self.rename_files()\n",
+      "        self.bundle_files()\n"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 165
+     "prompt_number": 122
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "processed_dir = \"/Users/jaeddy/Dropbox/data/projects/briSeqPipeline/GLOBUS_TESTING/Project_P43-12Processed_151013/\"\n",
+      "# processed_dir = \"/Users/jaeddy/Dropbox/data/projects/briSeqPipeline/GLOBUS_TESTING/Project_P43-12Processed_151013/\"\n",
+      "processed_dir = \"/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151013/\"\n",
       "processed_dir = os.path.abspath(processed_dir)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 6
+     "prompt_number": 124
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "msg =  [lib_file_dict[lib].append(f) for lib in lib_file_dict for f in os.listdir(subdir) if lib in f]"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 102
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "rc = ResultCurator(processed_dir)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 8
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "rc.get_outputs()"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 9
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "lib = rc.od.keys()[0]\n",
-      "lib_output_dict = rc.od[lib]"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 15
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "sc = SampleCurator(lib_id=lib, output_dict=lib_output_dict)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 109
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "source_dict = sc.build_source_dict()"
+      "rc = ResultCurator(processed_dir)\n",
+      "rc.curate_outputs()"
      ],
      "language": "python",
      "metadata": {},
@@ -344,165 +303,179 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "picard_align_metrics_html in source_dict[picard_align]: True\n",
-        "trinity_fasta in source_dict[trinity]: True\n",
-        "picard_markdups_metrics_html in source_dict[picard_markdups]: True\n",
-        "fastqc_qc_txt in source_dict[fastqc]: True\n",
-        "fastq in source_dict[fastq]: True\n",
-        "tophat_stats_metrics_txt in source_dict[tophat]: True\n",
-        "fastqc_qc_html in source_dict[fastqc]: True\n",
-        "trimmed_fastq in source_dict[trimmed_fastq]: True\n",
-        "picard_rnaseq_metrics_text in source_dict[picard_rnaseq]: True\n",
-        "htseq_counts_txt in source_dict[htseq]: True\n",
-        "tophat_alignments_bam in source_dict[tophat]: True\n",
-        "htseq_metrics_txt in source_dict[htseq]: True\n"
+        "lib6835_C6VG0ANXX\n",
+        "lib6840_C6VG0ANXX"
        ]
-      }
-     ],
-     "prompt_number": 110
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "rs = source_dict.keys()[4]\n",
-      "source_output_dict = source_dict[rs]\n",
-      "source_output_dict"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 171,
-       "text": [
-        "{'picard_align_metrics_html': {'file': '/~/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_151013/metrics/lib6835_C6VG0ANXX_picard_align_metrics.html',\n",
-        "  'type': 'metrics'}}"
-       ]
-      }
-     ],
-     "prompt_number": 171
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "fm = FileMunger(lib_id=lib, processed_dir=processed_dir, result_source=rs, output_dict=source_output_dict)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 172
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "fm.rename_files()"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
+      },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "/Users/jaeddy/Dropbox/data/projects/briSeqPipeline/GLOBUS_TESTING/Project_P43-12Processed_151013/metrics/lib6835_C6VG0ANXX_picard_align_metrics.html\n",
-        "/Users/jaeddy/Dropbox/data/projects/briSeqPipeline/GLOBUS_TESTING/Project_P43-12Processed_151013/metrics/lib6835_C6VG0ANXX_qc/Picard_Alignment_Summary_Metrics_html.html\n"
+        "\n",
+        "lib6841_C6VG0ANXX"
        ]
-      }
-     ],
-     "prompt_number": 173
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "source_dict.keys()"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
+      },
       {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 96,
+       "output_type": "stream",
+       "stream": "stdout",
        "text": [
-        "['fastqc',\n",
-        " 'fastq',\n",
-        " 'picard_markdups',\n",
-        " 'picard_align',\n",
-        " 'htseq',\n",
-        " 'picard_rnaseq',\n",
-        " 'tophat',\n",
-        " 'trinity']"
+        "\n",
+        "lib6836_C6VG0ANXX"
        ]
-      }
-     ],
-     "prompt_number": 96
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "[source_dict[s][o]['type'] for s in source_dict for o in source_dict[s]]"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
+      },
       {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 97,
+       "output_type": "stream",
+       "stream": "stdout",
        "text": [
-        "['qc',\n",
-        " 'qc',\n",
-        " 'fastq',\n",
-        " 'trimmed',\n",
-        " 'metrics',\n",
-        " 'metrics',\n",
-        " 'metrics',\n",
-        " 'counts',\n",
-        " 'metrics',\n",
-        " 'alignments',\n",
-        " 'metrics',\n",
-        " 'trinity']"
+        "\n",
+        "lib6825_C6VG0ANXX"
        ]
-      }
-     ],
-     "prompt_number": 97
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "lib_output_dict.keys()"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
+      },
       {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 91,
+       "output_type": "stream",
+       "stream": "stdout",
        "text": [
-        "['picard_align_metrics_html',\n",
-        " 'trinity_fasta',\n",
-        " 'picard_markdups_metrics_html',\n",
-        " 'fastqc_qc_txt',\n",
-        " 'fastq',\n",
-        " 'tophat_stats_metrics_txt',\n",
-        " 'fastqc_qc_html',\n",
-        " 'trimmed_fastq',\n",
-        " 'picard_rnaseq_metrics_text',\n",
-        " 'htseq_counts_txt',\n",
-        " 'tophat_alignments_bam',\n",
-        " 'htseq_metrics_txt']"
+        "\n",
+        "lib6923_C6VG0ANXX"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "lib6922_C6VG0ANXX"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "lib6830_C6VG0ANXX"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "lib6834_C6VG0ANXX"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "lib6842_C6VG0ANXX"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "lib6838_C6VG0ANXX"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "lib6837_C6VG0ANXX"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "lib6833_C6VG0ANXX"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "lib6832_C6VG0ANXX"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "lib6828_C6VG0ANXX"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "lib6827_C6VG0ANXX"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "lib6839_C6VG0ANXX"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "lib6829_C6VG0ANXX"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "lib6831_C6VG0ANXX"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "lib6826_C6VG0ANXX"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "lib6925_C6VG0ANXX"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "lib6924_C6VG0ANXX"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n"
        ]
       }
      ],
-     "prompt_number": 91
+     "prompt_number": 125
     },
     {
      "cell_type": "code",
