--- a/globusgalaxyops/notebooks/globusResultCompile.ipynb
+++ b/globusgalaxyops/notebooks/globusResultCompile.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:2f1dfcf88f1e1e172e37908a5cef2240de15b2e44864d0aee6727acac601f07d"
+  "signature": "sha256:ae3cf5ab5475144fad8185ee0594099016b85fdbd36971076ede8337789a3e8d"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -19,7 +19,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 88
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -120,7 +120,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 118
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -187,7 +187,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 119
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -274,20 +274,21 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 122
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "# processed_dir = \"/Users/jaeddy/Dropbox/data/projects/briSeqPipeline/GLOBUS_TESTING/Project_P43-12Processed_151013/\"\n",
-      "processed_dir = \"/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151013/\"\n",
+      "# processed_dir = \"/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P43-12Processed_151013/\"\n",
+      "processed_dir = \"/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/gProject_P109-1Processed_151001/\"\n",
       "processed_dir = os.path.abspath(processed_dir)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 124
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -303,8 +304,8 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "lib6835_C6VG0ANXX\n",
-        "lib6840_C6VG0ANXX"
+        "lib6606_C6VG0ANXX\n",
+        "lib6610_C6VG0ANXX"
        ]
       },
       {
@@ -312,7 +313,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "lib6841_C6VG0ANXX"
+        "lib6617_C6VG0ANXX"
        ]
       },
       {
@@ -320,7 +321,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "lib6836_C6VG0ANXX"
+        "lib6616_C6VG0ANXX"
        ]
       },
       {
@@ -328,7 +329,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "lib6825_C6VG0ANXX"
+        "lib6612_C6VG0ANXX"
        ]
       },
       {
@@ -336,7 +337,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "lib6923_C6VG0ANXX"
+        "lib6619_C6VG0ANXX"
        ]
       },
       {
@@ -344,7 +345,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "lib6922_C6VG0ANXX"
+        "lib6618_C6VG0ANXX"
        ]
       },
       {
@@ -352,7 +353,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "lib6830_C6VG0ANXX"
+        "lib6608_C6VG0ANXX"
        ]
       },
       {
@@ -360,7 +361,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "lib6834_C6VG0ANXX"
+        "lib6609_C6VG0ANXX"
        ]
       },
       {
@@ -368,7 +369,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "lib6842_C6VG0ANXX"
+        "lib6605_C6VG0ANXX"
        ]
       },
       {
@@ -376,7 +377,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "lib6838_C6VG0ANXX"
+        "lib6611_C6VG0ANXX"
        ]
       },
       {
@@ -384,7 +385,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "lib6837_C6VG0ANXX"
+        "lib6607_C6VG0ANXX"
        ]
       },
       {
@@ -392,7 +393,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "lib6833_C6VG0ANXX"
+        "lib6620_C6VG0ANXX"
        ]
       },
       {
@@ -400,7 +401,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "lib6832_C6VG0ANXX"
+        "lib6621_C6VG0ANXX"
        ]
       },
       {
@@ -408,7 +409,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "lib6828_C6VG0ANXX"
+        "lib6613_C6VG0ANXX"
        ]
       },
       {
@@ -416,7 +417,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "lib6827_C6VG0ANXX"
+        "lib6624_C6VG0ANXX"
        ]
       },
       {
@@ -424,7 +425,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "lib6839_C6VG0ANXX"
+        "lib6625_C6VG0ANXX"
        ]
       },
       {
@@ -432,7 +433,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "lib6829_C6VG0ANXX"
+        "lib6622_C6VG0ANXX"
        ]
       },
       {
@@ -440,7 +441,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "lib6831_C6VG0ANXX"
+        "lib6623_C6VG0ANXX"
        ]
       },
       {
@@ -448,7 +449,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "lib6826_C6VG0ANXX"
+        "lib6615_C6VG0ANXX"
        ]
       },
       {
@@ -456,15 +457,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "lib6925_C6VG0ANXX"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "lib6924_C6VG0ANXX"
+        "lib6614_C6VG0ANXX"
        ]
       },
       {
@@ -475,7 +468,7 @@
        ]
       }
      ],
-     "prompt_number": 125
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
