updating scripts to inspect latest flowcell

--- a/notebooks/checkAdapterContamination.ipynb
+++ b/notebooks/checkAdapterContamination.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:fe6e9899be575c3ff215b006acc23e687ed652a335aa07871706d8bae2b54b30"
+  "signature": "sha256:a769a6f607feea52d01e8872b285ac8aa908d3547036479fa623734b8f3849d0"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -30,49 +30,57 @@
       "                     '150615_D00565_0087_AC6VG0ANXX': ['P14-12'],\n",
       "                     '150828_D00565_0095_BC6NRPANXX': ['P90-13'],\n",
       "                     '150721_D00565_0091_BHVHTMADXX': ['P54-5', 'P85-7', 'P43-17', 'P43-19'],\n",
-      "                     '150625_D00565_0089_BHMMCMADXX': ['P54-2']},\n",
+      "                     '150625_D00565_0089_BHMMCMADXX': ['P54-2'],\n",
+      "                     '151123_D00565_0099_BC81MLANXX': ['P69-8']},\n",
       "                 2: {'151008_D00565_0098_AC81KDANXX': ['P54-6', 'P54-9', 'P81-9', 'P43-25'],\n",
       "                     '150729_D00565_0092_AC6VC6ANXX': ['P111-2', 'P117-3', 'P90-14'],\n",
       "                     '150615_D00565_0087_AC6VG0ANXX': ['P14-12'],\n",
       "                     '150828_D00565_0095_BC6NRPANXX': ['P90-13'],\n",
       "                     '150721_D00565_0091_BHVHTMADXX': ['P54-5', 'P85-7', 'P43-17', 'P43-19'],\n",
-      "                     '150625_D00565_0089_BHMMCMADXX': ['P54-2']},\n",
+      "                     '150625_D00565_0089_BHMMCMADXX': ['P54-2'],\n",
+      "                     '151123_D00565_0099_BC81MLANXX': ['P69-8']},\n",
       "                 3: {'151008_D00565_0098_AC81KDANXX': ['P54-6', 'P54-9', 'P81-9', 'P43-25'],\n",
       "                     '150729_D00565_0092_AC6VC6ANXX': ['P43-18'],\n",
       "                     '150615_D00565_0087_AC6VG0ANXX': ['P69-6'],\n",
       "                     '150828_D00565_0095_BC6NRPANXX': ['P90-13'],\n",
       "                     '150721_D00565_0091_BHVHTMADXX': [],\n",
-      "                     '150625_D00565_0089_BHMMCMADXX': []},\n",
+      "                     '150625_D00565_0089_BHMMCMADXX': [],\n",
+      "                     '151123_D00565_0099_BC81MLANXX': ['P123-2']},\n",
       "                 4: {'151008_D00565_0098_AC81KDANXX': ['P124-1'],\n",
       "                     '150729_D00565_0092_AC6VC6ANXX': ['P89-7'],\n",
       "                     '150615_D00565_0087_AC6VG0ANXX': ['P69-6'],\n",
       "                     '150828_D00565_0095_BC6NRPANXX': ['P90-13'],\n",
       "                     '150721_D00565_0091_BHVHTMADXX': [],\n",
-      "                     '150625_D00565_0089_BHMMCMADXX': []},\n",
+      "                     '150625_D00565_0089_BHMMCMADXX': [],\n",
+      "                     '151123_D00565_0099_BC81MLANXX': ['P54-10']},\n",
       "                 5: {'151008_D00565_0098_AC81KDANXX': ['P124-1'],\n",
       "                     '150729_D00565_0092_AC6VC6ANXX': ['P89-9'],\n",
       "                     '150615_D00565_0087_AC6VG0ANXX': ['P69-6'],\n",
       "                     '150828_D00565_0095_BC6NRPANXX': ['P90-13'],\n",
       "                     '150721_D00565_0091_BHVHTMADXX': [],\n",
-      "                     '150625_D00565_0089_BHMMCMADXX': []},\n",
+      "                     '150625_D00565_0089_BHMMCMADXX': [],\n",
+      "                     '151123_D00565_0099_BC81MLANXX': ['P54-12']},\n",
       "                 6: {'151008_D00565_0098_AC81KDANXX': ['P124-1'],\n",
       "                     '150729_D00565_0092_AC6VC6ANXX': ['P89-9'],\n",
       "                     '150615_D00565_0087_AC6VG0ANXX': ['P43-12', 'P43-13', 'P81-8'],\n",
       "                     '150828_D00565_0095_BC6NRPANXX': ['P90-13'],\n",
       "                     '150721_D00565_0091_BHVHTMADXX': [],\n",
-      "                     '150625_D00565_0089_BHMMCMADXX': []},\n",
+      "                     '150625_D00565_0089_BHMMCMADXX': [],\n",
+      "                     '151123_D00565_0099_BC81MLANXX': ['P54-14']},\n",
       "                 7: {'151008_D00565_0098_AC81KDANXX': ['P69-7'],\n",
       "                     '150729_D00565_0092_AC6VC6ANXX': ['P54-3'],\n",
       "                     '150615_D00565_0087_AC6VG0ANXX': ['P109-1'],\n",
       "                     '150828_D00565_0095_BC6NRPANXX': ['P90-13'],\n",
       "                     '150721_D00565_0091_BHVHTMADXX': [],\n",
-      "                     '150625_D00565_0089_BHMMCMADXX': []},\n",
+      "                     '150625_D00565_0089_BHMMCMADXX': [],\n",
+      "                     '151123_D00565_0099_BC81MLANXX': ['P54-11', 'P54-13', 'P54-15']},\n",
       "                 8: {'151008_D00565_0098_AC81KDANXX': ['P90-14'],\n",
       "                     '150729_D00565_0092_AC6VC6ANXX': ['P54-4'],\n",
       "                     '150615_D00565_0087_AC6VG0ANXX': ['P91-10'],\n",
       "                     '150828_D00565_0095_BC6NRPANXX': ['P90-13'],\n",
       "                     '150721_D00565_0091_BHVHTMADXX': [],\n",
-      "                     '150625_D00565_0089_BHMMCMADXX': []}}\n",
+      "                     '150625_D00565_0089_BHMMCMADXX': [],\n",
+      "                     '151123_D00565_0099_BC81MLANXX': ['P43-28']}}\n",
       "    lane = [ l for l in lane_dict \\\n",
       "             if project in lane_dict[l][flowcell] ][0]\n",
       "    return lane\n",
@@ -83,25 +91,29 @@
       "                                  '150615_D00565_0087_AC6VG0ANXX': [],\n",
       "                                  '150828_D00565_0095_BC6NRPANXX': [],\n",
       "                                  '150721_D00565_0091_BHVHTMADXX': [1, 2],\n",
-      "                                  '150625_D00565_0089_BHMMCMADXX': []},\n",
+      "                                  '150625_D00565_0089_BHMMCMADXX': [],\n",
+      "                                  '151123_D00565_0099_BC81MLANXX': [7]},\n",
       "                 'nextera_c1': {'151008_D00565_0098_AC81KDANXX': [1],\n",
       "                                '150729_D00565_0092_AC6VC6ANXX': [3, 4, 5, 6, 7, 8],\n",
       "                                '150615_D00565_0087_AC6VG0ANXX': [6, 8],\n",
       "                                '150828_D00565_0095_BC6NRPANXX': [],\n",
       "                                '150721_D00565_0091_BHVHTMADXX': [],\n",
-      "                                '150625_D00565_0089_BHMMCMADXX': [1, 2]},\n",
+      "                                '150625_D00565_0089_BHMMCMADXX': [1, 2],\n",
+      "                                '151123_D00565_0099_BC81MLANXX': [3, 4, 5, 6, 8]},\n",
       "                 'truseq_stranded': {'151008_D00565_0098_AC81KDANXX': [4, 5, 6],\n",
       "                                     '150729_D00565_0092_AC6VC6ANXX': [],\n",
       "                                     '150615_D00565_0087_AC6VG0ANXX': [3, 4, 5],\n",
       "                                     '150828_D00565_0095_BC6NRPANXX': [],\n",
       "                                     '150721_D00565_0091_BHVHTMADXX': [],\n",
-      "                                     '150625_D00565_0089_BHMMCMADXX': []},\n",
+      "                                     '150625_D00565_0089_BHMMCMADXX': [],\n",
+      "                                     '151123_D00565_0099_BC81MLANXX': [1, 2]},\n",
       "                 'truseq_nonstranded': {'151008_D00565_0098_AC81KDANXX': [],\n",
       "                                        '150729_D00565_0092_AC6VC6ANXX': [2],\n",
       "                                        '150615_D00565_0087_AC6VG0ANXX': [1, 2, 7],\n",
       "                                        '150828_D00565_0095_BC6NRPANXX': [1, 2, 3, 4, 5, 6, 7, 8],\n",
       "                                        '150721_D00565_0091_BHVHTMADXX': [],\n",
-      "                                        '150625_D00565_0089_BHMMCMADXX': []}}\n",
+      "                                        '150625_D00565_0089_BHMMCMADXX': [],\n",
+      "                                        '151123_D00565_0099_BC81MLANXX': []}}\n",
       "    prep = [ p for p in prep_dict \\\n",
       "             if lane in prep_dict[p][flowcell] ][0]\n",
       "    return prep\n",
@@ -251,12 +263,14 @@
       "#                 '/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P69-6Processed/',\n",
       "#                 '/Volumes/genomics/Illumina/150729_D00565_0092_AC6VC6ANXX/Project_P111-2Processed/']\n",
       "\n",
-      "fcs = ['151008_D00565_0098_AC81KDANXX', \n",
-      "       '150615_D00565_0087_AC6VG0ANXX', \n",
-      "       '150729_D00565_0092_AC6VC6ANXX',\n",
-      "       '150828_D00565_0095_BC6NRPANXX',\n",
-      "       '150721_D00565_0091_BHVHTMADXX',\n",
-      "       '150625_D00565_0089_BHMMCMADXX']\n",
+      "# fcs = ['151008_D00565_0098_AC81KDANXX', \n",
+      "#        '150615_D00565_0087_AC6VG0ANXX', \n",
+      "#        '150729_D00565_0092_AC6VC6ANXX',\n",
+      "#        '150828_D00565_0095_BC6NRPANXX',\n",
+      "#        '150721_D00565_0091_BHVHTMADXX',\n",
+      "#        '150625_D00565_0089_BHMMCMADXX']\n",
+      "fcs = ['151123_D00565_0099_BC81MLANXX']\n",
+      "\n",
       "fc_list = [ os.path.join('/Volumes/genomics/Illumina', fc) for fc in fcs ]\n",
       "\n",
       "\n",
@@ -265,7 +279,7 @@
       "# adapter_count_df.to_csv('../data/fastqc_adapter_counts.csv')\n",
       "    \n",
       "adapter_seq_df = get_adapter_details(fc_list)\n",
-      "adapter_seq_df.to_csv('../data/fastqc_adapter_seqs.csv')"
+      "adapter_seq_df.to_csv('../data/fastqc_adapter_seqs_151123.csv')"
      ],
      "language": "python",
      "metadata": {},
